Add Trial No. message in compare modal and add a button to link webui document

--- a/src/webui/src/static/style/slideBar.scss
+++ b/src/webui/src/static/style/slideBar.scss
@@ -9,10 +9,11 @@ $drowHoverBgColor: #e2e2e2;
     border: none;
     color: #fff;
     font-size: 16px;
-    padding: 0;
+    padding: 0 8px;
 }
 .fresh:hover{
     color: #fff;
+    background-color: #006cb5;
 }
 
 .dropdown{
