--- a/src/webui/src/static/style/trialsDetail.scss
+++ b/src/webui/src/static/style/trialsDetail.scss
@@ -15,10 +15,12 @@
     .ant-tabs-tab-active{
         .panelTitle{
             background-color: #999;
+            /*
             span{
                 color: #fff;
                 font-weight: normal;
             }
+            */
         }
     }
     .panelTitle{
