--- a/src/webui/src/static/style/logDrawer.scss
+++ b/src/webui/src/static/style/logDrawer.scss
@@ -25,8 +25,9 @@
   height: 100%;
 }
 
+/* log drawer download & close button's row */
 .buttons{
-  margin-top: 11px;
+  margin-top: 16px;
   .close{
     text-align: right;
   }
