Could download trial log in table open row

--- a/src/webui/src/static/style/openRow.scss
+++ b/src/webui/src/static/style/openRow.scss
@@ -48,7 +48,7 @@ $bgColor: #f2f2f2;
     }
 }
 
-#description{
+#description, #trialog{
     .bgHyper{
         background-color: #fff;
         margin-bottom: 12px;
