--- a/src/webui/src/static/style/table.scss
+++ b/src/webui/src/static/style/table.scss
@@ -57,23 +57,25 @@
     }
 
     td{
-        padding: 0 15px;
+        padding: 0px;
         line-height: 24px;
+    }
+
+    /* + button */
+    .ant-table-row-expand-icon{
+        background: none;
     }
 
     .ant-table-row-expand-icon-cell{
         background: #ccc;
-        width: 50px;
         .ant-table-row-expand-icon{
-            background: none;
             border: none;
+            width: 100%;
+            height: 100%;
         }
     }
     .ant-table-row-expand-icon-cell:hover{
         background: #ccc;
-    }
-    .ant-table-selection-column{
-        width: 50px;
     }
 }
 
@@ -113,40 +115,7 @@
 }
 
 #detail-button{
-    margin: 2px 0;
-    .common-style, .common-style:visited, .common-style:focus{
-        height: 26px;
-        border: none;
-        border-radius: 0;
-        background-color: #0078d4;
-    }
-    .common-style:hover{
-        background-color: #106ebe;
-    }
-    .common-style:active{
-        background-color: #005a9e;
-        outline: 0;
-    }
-    .common-style:disabled{
-        background-color: #f4f4f4;
-    }
-    .special, .special:visited, .special:focus, .special button{
-        height: 26px;
-        border: none;
-        border-radius: 0;
-        outline: 0;
-        background-color: #f4f4f4;
-        color: #333;
-    }
-    .special:hover{
-        background-color: #eaeaea;
-    }
-    .special:active{
-        background-color: #c8c8c8;
-        outline: 0;
-    }
-    .special:disabled, .special button:disabled{
-        background-color: #f4f4f4;
-        color: #d9d9d9;
+    i{
+        color: #fff;
     }
 } 
