--- a/src/webui/src/static/style/trialsDetail.scss
+++ b/src/webui/src/static/style/trialsDetail.scss
@@ -1,41 +1,43 @@
-
+$bg: #b3b3b3;
 #tabsty{
-    .ant-tabs-nav-container{
-        height: 38px;
-    }
-    .ant-tabs-tab{
-        border: none;
-        margin-right: 0;
-        line-height: 38px;
-        padding: 0;
-    }
-    .ant-tabs-nav-scroll{
-        background-color: #b3b3b3;
-    }
-    .ant-tabs-tab-active{
-        .panelTitle{
-            background-color: #999;
-            /*
-            span{
-                color: #fff;
-                font-weight: normal;
+    .ms-Pivot{
+        .ms-Button{
+            padding: 0;
+            border-right: 2px solid #fff;
+
+            &:hover{
+                background-color: $bg;
             }
-            */
+            .ms-Button-flexContainer{
+                background-color: $bg;
+            }
         }
     }
-    .panelTitle{
-        margin-right: 14px;
-        border-right: 2px solid #e8e8e8;
+    
+    .ms-Pivot-icon{
+        margin-left: 12px;
     }
+    
+    .ms-Pivot-text{
+        /* Default metric | Hyper-parameter | Duration | Intermediate result*/
+        margin: 0 12px;
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    /*.is-selected{
+        background-color: red !important;
+        border: none !important;
+    }*/
 }
 
 .trial{
     /* graph, title total height */
     width: 100%;
     height: 478px;
-    /* cancle default panel title style*/
-    .ant-tabs-bar{
-        margin: 0;
+    /* graph all title bg*/
+    .ms-FocusZone{
+        background-color: $bg;
     }
     .graph{
         height: 432px;
@@ -96,3 +98,9 @@
         top: 86%;
     }
 }
+
+.graphContent{
+    margin: 0 auto;
+}
+
+
