show message info when click buttons

--- a/src/webui/src/static/style/overview.scss
+++ b/src/webui/src/static/style/overview.scss
@@ -52,3 +52,13 @@
 .link{
     margin-bottom: 10px;
 }
+
+.info{
+    position: relative;
+    top: 15px;
+    left: 10px;
+    span{
+        color: #333;
+        font-size: 14px;
+    }
+}
