--- a/src/webui/src/static/style/overviewTitle.scss
+++ b/src/webui/src/static/style/overviewTitle.scss
@@ -12,8 +12,10 @@ $titleBgcolor: #b3b3b3;
 
     img{
         height: 22px;
-        margin-top: -8px;
-        padding-left: 14px;
+        /* (38 - 22 ) / 2 */
+        margin-top: 8px;
+        /* icon left and right */
+        padding: 0 14px;
     }
 
     span{
@@ -21,7 +23,6 @@ $titleBgcolor: #b3b3b3;
         font-weight: 600;
         color: #333;
         line-height: 38px;
-        margin-left: 14px;
     }
 
     i{
