fix detail style

--- a/src/webui/src/App.scss
+++ b/src/webui/src/App.scss
@@ -31,3 +31,15 @@
   margin-bottom: 30px;
   background: #fff;
 }
+
+/* office-fabric-ui */
+.ms-Pivot-linkContent{
+  height: 44px;
+}
+
+.ms-Callout-main{
+  p{
+    font-weight: 500;
+    color: #333;
+  }
+}
