--- a/src/webui/src/static/style/table.scss
+++ b/src/webui/src/static/style/table.scss
@@ -24,100 +24,26 @@
         }
     }
 }
-/* add the brother selector to increase the priority */
-#succeTable .commonTableStyle, #tableList .commonTableStyle {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    tr{
-        text-align: center;
-        color:#212121;
-        font-size: 14px;
-    }
-    th{
-        padding: 2px;
-        background-color:white !important;
-        font-size: 14px;
-        color: #808080;
-        text-align: center;
-    }
-
-
-    .ant-table-expanded-row{
-        /* background-color: #f2f2f2 */
-        background-color: transparent;
-    }
-
-    tr:hover{
-        /* cancel antd table default hover style */
-        td{
-            background-color: transparent;
-        }
-        .ant-table-row-expand-icon{
-            background-color: transparent;
-        }
-    }
-
-    td{
-        padding: 0px;
-        line-height: 24px;
-    }
-
-    /* + button */
-    .ant-table-row-expand-icon{
-        background: none;
-    }
-
-    .ant-table-row-expand-icon-cell{
-        background: #ccc;
-        .ant-table-row-expand-icon{
-            border: none;
-            width: 100%;
-            height: 100%;
-        }
-    }
-    .ant-table-row-expand-icon-cell:hover{
-        background: #ccc;
-    }
-}
-
-/* let openrow content left*/
-.hyperpar{
-    text-align: left;
-    line-height: 18px;
-    font-size: 14px;
-    overflow: hidden;
-    margin-bottom: 10px;
-}
-
-/* the position of the pagination */
-.ant-table-pagination.ant-pagination{
-    margin: 16px 0;
-    float: right;
-    margin-right: 30px;
-}
-
-.ant-modal-title{
-    font-size: 20px;
-}
-
-/*disable select all checkbox in detail page*/
-.ant-table-selection{
-    display: none;
-}
-
-/* fix the border-bottom bug in firefox and edge */
-.ant-table-thead > tr > th .ant-table-column-sorters::before{
-    padding-bottom: 25px;
-    border-bottom: 1px solid #e8e8e8;
-}
 
 .margin-mediate{
     margin: 0 10px;
 }
 
-#detail-button{
+.detail-button{
+    &-operation{
+        min-width: 44px;
+        border: none;
+        margin-right: 10px;
+    }
     i{
         color: #fff;
     }
 } 
 
 /* office-fabric-ui */
+.ms-DetailsRow{
+    height: 42px;
+}
+.detail-table{
+    padding: 5px 0 0 0;
+}
