update nav and detail modal style

--- a/src/webui/src/static/style/logDrawer.scss
+++ b/src/webui/src/static/style/logDrawer.scss
@@ -21,8 +21,10 @@
     margin-left: 10px;
     display: none;
   }
-  .ms-Pivot-text{
+  /* log manager|dispatcher log tab */
+  .ms-Pivot-link{
     color: #fff;
+    background-color: #333;
   }
 }
 
