--- a/src/webui/src/static/style/progress.scss
+++ b/src/webui/src/static/style/progress.scss
@@ -5,6 +5,10 @@
     font-size: 20px;
     font-weight: 600;
     margin-top: 5px;
+    .status-text{
+      display: inline-block;
+      line-height: 30px;
+    }
   }
 
   .probar {
