--- a/src/webui/src/static/style/search.scss
+++ b/src/webui/src/static/style/search.scss
@@ -3,6 +3,11 @@
     width: 96%;
     margin: 0 auto;
     margin-top: 15px;
+
+    &-compare{
+        margin-top: 15px;
+    }
+
     &-entry{
         line-height: 32px;
     }
