--- a/src/webui/src/static/style/overviewTitle.scss
+++ b/src/webui/src/static/style/overviewTitle.scss
@@ -1,4 +1,6 @@
 $titleBgcolor: #b3b3b3;
+$iconPaddingVal: 14px;
+
 .overview .overviewBoder{
     height: 100%;
     border-right: 2px solid white;
@@ -8,14 +10,15 @@ $titleBgcolor: #b3b3b3;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100%;
     height: 38px;
+    padding: 0 $iconPaddingVal;
     background: $titleBgcolor;
 
     img{
         height: 22px;
         /* (38 - 22 ) / 2 */
         margin-top: 8px;
-        /* icon left and right */
-        padding: 0 14px;
+        /* icon right */
+        padding: 0 $iconPaddingVal 0 0;
     }
 
     span{
@@ -27,10 +30,7 @@ $titleBgcolor: #b3b3b3;
 
     i{
         font-size: 24px;
-        margin-left: 14px;
         color: #545454;
-        position: relative;
-        top: 2px;
     }
 }
 
@@ -47,11 +47,11 @@ $titleBgcolor: #b3b3b3;
     }
 
     .title{
-        width: 135px;
         border-left: 2px solid #fff;
     }
 
     .minTitle{
+        margin-right: $iconPaddingVal;
         border-right: 2px solid #fff;
     }
 
