--- a/src/webui/src/static/style/overviewTitle.scss
+++ b/src/webui/src/static/style/overviewTitle.scss
@@ -1,4 +1,6 @@
 $titleBgcolor: #b3b3b3;
+$iconPaddingVal: 14px;
+
 .overview .overviewBoder{
     height: 100%;
     border-right: 2px solid white;
@@ -8,12 +10,15 @@ $titleBgcolor: #b3b3b3;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100%;
     height: 38px;
+    padding: 0 $iconPaddingVal;
     background: $titleBgcolor;
 
     img{
         height: 22px;
-        margin-top: -8px;
-        padding-left: 14px;
+        /* (38 - 22 ) / 2 */
+        margin-top: 8px;
+        /* icon right */
+        padding: 0 $iconPaddingVal 0 0;
     }
 
     span{
@@ -21,15 +26,11 @@ $titleBgcolor: #b3b3b3;
         font-weight: 600;
         color: #333;
         line-height: 38px;
-        margin-left: 14px;
     }
 
     i{
         font-size: 24px;
-        margin-left: 14px;
         color: #545454;
-        position: relative;
-        top: 2px;
     }
 }
 
@@ -46,11 +47,11 @@ $titleBgcolor: #b3b3b3;
     }
 
     .title{
-        width: 135px;
         border-left: 2px solid #fff;
     }
 
     .minTitle{
+        margin-right: $iconPaddingVal;
         border-right: 2px solid #fff;
     }
 
