update succeed table in time

--- a/src/webui/src/static/style/overview.scss
+++ b/src/webui/src/static/style/overview.scss
@@ -57,3 +57,11 @@
         font-size: 14px;
     }
 }
+
+/* overview-succeed-graph */
+.showMess{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
