rename class name

--- a/src/webui/src/static/style/trialsDetail.scss
+++ b/src/webui/src/static/style/trialsDetail.scss
@@ -108,7 +108,7 @@ $bg: #b3b3b3;
 /* for yAxis # intermediate position in intermediate graph*/
 .intermediate-graph{
     position: relative;
-    .yAxis{
+    .xAxis{
         color: #333;
         position: absolute;
         left: 50%;
