add hover style

--- a/src/webui/src/static/style/progress.scss
+++ b/src/webui/src/static/style/progress.scss
@@ -107,3 +107,7 @@
     border: 2px solid #e6e6e6;
     border-radius: 0 12px 12px 0 !important;
 }
+
+.cursor, .cursor:hover{
+  cursor: pointer;
+}
