--- a/src/webui/src/App.scss
+++ b/src/webui/src/App.scss
@@ -29,7 +29,15 @@
   margin: 0 auto;
   margin-top: 74px;
   margin-bottom: 30px;
-  background: #fff;
+}
+
+.bottomBgcolor{
+  background-color: #fff;
+  margin-bottom: 10px;
+}
+
+.searchSpaceLeftRight{
+  margin: 0 10px;
 }
 
 /* office-fabric-ui */
