--- a/src/webui/src/static/style/trialsDetail.scss
+++ b/src/webui/src/static/style/trialsDetail.scss
@@ -1,5 +1,6 @@
 $bg: #b3b3b3;
 #tabsty{
+    background-color: #fff;
     .ms-Pivot{
         .ms-Button{
             padding: 0;
@@ -8,12 +9,14 @@ $bg: #b3b3b3;
             border-right: 2px solid #fff;
             transition: 0.3s;
 
+            /*
             &:hover{
                 background-color: $bg;
             }
             .ms-Button-flexContainer{
                 background-color: $bg;
             }
+            */
         }
 
         .ms-Pivot-link::before{
@@ -46,6 +49,7 @@ $bg: #b3b3b3;
     width: 100%;
     height: 500px;
     /* graph all title bg*/
+    /*
     .ms-FocusZone{
         background-color: $bg;
     }
@@ -53,6 +57,7 @@ $bg: #b3b3b3;
         height: 432px;
         margin: 0 auto;
     }
+    */
 }
 
 .detailTabs{
