refactor best trials

--- a/src/webui/src/App.scss
+++ b/src/webui/src/App.scss
@@ -29,7 +29,18 @@
   margin: 0 auto;
   margin-top: 74px;
   margin-bottom: 30px;
-  background: #fff;
+}
+
+.bottomDiv{
+  margin-bottom: 10px;
+}
+
+.bgNNI{
+  background-color: #fff;
+}
+
+.borderRight{
+  margin-right: 10px;
 }
 
 /* office-fabric-ui */
