--- a/docs/static/css/custom.css
+++ b/docs/static/css/custom.css
@@ -36,7 +36,8 @@
 
 /* document body width */
 .wy-nav-content{
-    max-width: 90% !important;
+    max-width: 100% !important;
+    background-color: #fff;
 }
 
 /* nni logo bgcolor */
@@ -45,7 +46,7 @@
 }
 
 /* document body font-family */
-.wy-body-for-nav{
+.wy-body-for-nav, h1, h2, h3, h4, h5, h6, div, p, ul, li, a{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -85,6 +86,10 @@ td.framework{
     text-align: center;
 }
 
-.inline{
+.inline img, .inline h3{
     display: inline-block;
+}
+  
+.ui-img img{
+    height: 230px;
 }
